setup/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: video-server-ui
    namespace: video-server
    labels:
        app: video-server-ui
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
    selector:
        app: video-server-ui
