setup/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: videoserver-ui-ingress
    namespace: video-server
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
              - dev.video-server.iudx.io
          secretName: dev-video-server-iudx-io-tls
    rules:
        - host: dev.video-server.iudx.io
          http:
              paths:
                  - path: /
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: video-server-ui
                            port:
                                number: 80
